--- a/homePage.html
+++ b/homePage.html
@@ -10,6 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body class="bg-black">
     <footer>
@@ -26,10 +27,10 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="col-1">
+          <div class="col-1 custom-img-logo">
             <!-- logo -->
             <img
-              class="img-fluid"
+              class="img-fluid w-100"
               src="./assets/netflix_logo.png"
               alt="netflix_logo"
             />
@@ -60,7 +61,8 @@
             </ul>
           </div>
           <!-- fine collapsable -->
-          <div class="col-1">
+          <!-- inizio sezione utente -->
+          <div class="col-1 custom-img-avatar">
             <li class="nav-item dropdown text-light">
               <a
                 class="nav-link dropdown-toggle"
@@ -69,11 +71,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                <img
-                  class="img-fluid w-100"
-                  src="./assets/avatar.png"
-                  alt="avatar"
-                />
+                <img class="w-100" src="./assets/avatar.png" alt="avatar" />
               </a>
 
               <ul class="dropdown-menu">
@@ -86,6 +84,9 @@
               </ul>
             </li>
           </div>
+          <!-- fine sezione utente -->
+          <div class="col-1"><i class="bi bi-bell"></i></div>
+          <!-- fine sezione navbar interna -->
         </div>
       </nav>
     </footer>
