--- a/userPage.html
+++ b/userPage.html
@@ -100,31 +100,53 @@
               </button>
               <hr class="text-light" />
               <h4 class="text-light mt-4">Autoplay controls</h4>
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  value=""
+                  id="defaultCheck1"
+                  checked
+                />
+                <label class="form-check-label text-light" for="defaultCheck1">
+                  Autoplay next episode in a series on all devices.
+                </label>
+              </div>
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  value=""
+                  id="defaultCheck2"
+                  checked
+                />
+                <label class="form-check-label text-light" for="defaultCheck1">
+                  Autoplay previews while browsing on all devices.
+                </label>
+              </div>
             </form>
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                value="o"
-                id="defaultCheck1"
-                checked
-              />
-              <label class="form-check-label" for="defaultCheck1">
-                Autoplay next episode in a series on all devices.
-              </label>
-            </div>
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                value=""
-                id="defaultCheck1"
-              />
-              <label class="form-check-label" for="defaultCheck1">
-                Autoplay previews while browsing on all devices.
-              </label>
-            </div>
           </div>
+        </div>
+        <hr class="text-light" />
+        <div
+          class="row row-cols-1 row-cols-lg-3 gap-3"
+          style="padding-left: 210px"
+        >
+          <button
+            type="button"
+            class="btn btn-dark bg-light text-black"
+            style="width: 100px"
+          >
+            <a class="text-decoration-none text-black" href="homePage.html"
+              >SAVE</a
+            >
+          </button>
+          <button type="button" class="btn btn-dark" style="width: 150px">
+            CANCEL
+          </button>
+          <button type="button" class="btn btn-dark" style="width: 200px">
+            DELETE PROFILE
+          </button>
         </div>
       </div>
     </main>
