--- a/homePage.html
+++ b/homePage.html
@@ -100,11 +100,13 @@
               </a>
 
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <a class="dropdown-item" href="userPage.html">Settings</a>
+                </li>
+                <li><a class="dropdown-item" href="#">User</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="#">Esci</a>
                 </li>
               </ul>
             </li>
